# lib/api-spec/openapi.yaml
@@ -153,6 +153,10 @@ paths:
           schema:
             type: integer
             default: 100
+        - name: resolved
+          in: query
+          schema:
+            type: boolean
       responses:
         "200":
           description: Signal list
